cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_compile_options(-O2 -g -Wctor-dtor-privacy -Wreorder -Wold-style-cast -Wsign-promo -Wchar-subscripts -Winit-self -Wmissing-braces -Wparentheses -Wreturn-type -Wswitch -Wtrigraphs -Wextra -Wno-sign-compare -Wno-narrowing -Wno-attributes)
project(san VERSION 0.1)
set(SRC  oathsworn.cpp)
add_executable(oathsworn ${SRC})
target_link_libraries(oathsworn PUBLIC  ginac  gmp cln boost_program_options)
target_link_directories(oathsworn PUBLIC $ENV{WEDGE_PATH}/lib)
target_include_directories(oathsworn PUBLIC $ENV{WEDGE_PATH}/include)

